Fixes issue #199. Allow empty itemstacks in dissolver recipe creation. Now dissolvers can output nothing!